@@ -6,8 +6,8 @@ guilemodule_DATA =
 
 if HAVE_PANGO
 guilemodule_DATA += pango.scm
-SUBDIRS += gw
+SUBDIRS += gw overrides
 endif
 
 EXTRA_DIST = pango.scm
-DIST_SUBDIRS = gw
+DIST_SUBDIRS = gw overrides
